# soqlstudio

./: Cargo.toml  README.md  app.py  requirements.txt  setup.py  state.json
src/: config.rs  main.rs  utils.rs
src/socrata/: analysis.rs  data.rs  mod.rs
src/style/: mod.rs
src/syntaxhighlight/: mod.rs
