[package]
name = "soqlstudio"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "^1.0"
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
syntect = { version = "5", features = ["default-fancy"] }
enum-map = { version = "2", features = ["serde"] }
unicode_names2 = { version = "0.5.0", default-features = false }
reqwest = { version = "0.11", features = ["json", "blocking"] }
csv = "1.1.6"
regex = "1.8.4"
tokio = { version = "1", features = ["full"] }
flowync = { version = "5.1.0", features = ["compact"] }
